--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <ul id="nytimes-articles" class="article-list"></ul>
 
-    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/libs/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
